Revision history for Perl extension Wx.

0.28

0.27  Sun Jan  1 21:13:27 CET 2006
	- Restored compatibility with wxWidgets 2.5.3.
	- Build a proper application bundle under Mac OS X.

0.26  Tue Nov 22 20:16:34 CET 2005
	- Fixed various Wx::GridBagSizer problems.
	- Fixed Original Object Return for Wx::PlGridCellEditor and
	  Wx::PlGridCellRenderer.
	- Removed the requirement of deriving from Wx::App.
	- Expanded Wx::PlWindow.
	- Added Wx::Perl::TextValidator (thanks to Johan Vromans).
	- Changed the interface for Wx::PlDataObjectSimple::GetDataHere.
	- Added Wx::BufferedDC and Wx::BufferedPaintDC.
	- Added wxStdButtonSizer.
	- Build out of the box on FreeBSD.

0.25  Sun Jul 10 20:39:30 CEST 2005
	- Added back Wx::NotebookSizer (removed by accident).
	- Fixed off-by-one error in Wx::Log::SetTimestamp.
	- Fixed crash with eval + use in event handler.
	- Fixed test suite for wxWidgets 2.4.x.

0.24  Tue Jul  5 21:42:28 CEST 2005
	- Fix using wxPerl with PAR on Linux.

0.23  Sun Jun 26 20:33:17 CEST 2005
	- Added wxArtProvider and Wx::PlArtProvider
          (thanks to Matthew "Cheetah" Gabeler-Lee).
	- Compatibility with wxWidgets 2.5.4, 2.6.0 and 2.6.1.
	- Added Wx::PlPreviewFrame, Wx::PlPreviewControlBar,
	  Wx::PrintFactory.
	- Added Wx::PopupWindow and Wx::PopupTransientWindow.
	- Added Wx::DatePickerCtrl. (2.5/2.6)
	- Added Wx::MimeTypesManager.

0.22  Tue Jan  4 23:07:56 CET 2005
	- Alpha channel support for Wx::Image (2.5).
	- Wrapped wxChoicebook (2.5).
	- Various new APIs for wxWidgets 2.5.x.

0.21  Sat Dec 11 18:01:25 CET 2004
	- Fixed installation of 'wxPerl' command on Mac OS X.
	- Fixed running in the embedded case (still requires the
	  application to call ExitMainLoop at the right places).
	- Wrapped wxNavigationKeyEvent.
	- Using die() in an event handler should not crash anymore
	  (it might leak).
	- Added Wx::PlWindow, to be used for custom controls.
	- New (Windows-only) --mslu flag for Makefile.PL.
	- Wx::NotebookSizer is now no longer needed and