@@ -1,0 +1,17 @@
+#############################################################################
+## Name:        ext/media/typemap
+## Purpose:     typemap
+## Author:      Mattia Barbon
+## Modified by:
+## Created:     04/03/2006
+## RCS-ID:      $Id: typemap,v 1.1 2006/03/10 19:25:33 mbarbon Exp $
+## Copyright:   (c) 2006 Mattia Barbon
+## Licence:     This program is free software; you can redistribute it and/or
+##              modify it under the same terms as Perl itself
+#############################################################################
+
+TYPEMAP
+wxMediaCtrlPlayerControls T_ENUM
+wxMediaState            T_ENUM
+
+wxMediaCtrl *           O_WXOBJECT
