@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     27/07/2001
-## RCS-ID:      $Id: typemap,v 1.6 2004/12/21 21:12:57 mbarbon Exp $
+## RCS-ID:      $Id: typemap,v 1.7 2006/03/10 19:25:34 mbarbon Exp $
 ## Copyright:   (c) 2001, 2003-2004 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
